--- a/chapter2.tex
+++ b/chapter2.tex
@@ -98,6 +98,11 @@ Grouth et al \cite{groth} developed a provenance collection system, PReServ whic
 
 Bates et al \cite{Bates:2015:TOY:2814579.2814586} developed a system which allows maximizing provenance storage collection in the Linux OS environment using mandatory access control policy. this enables provenance avoidance of recording unnecessary provenance data and only recording interesting provenance that is important to an application. In MAC system, every object contains a label and the MAC policy specify interactions between different labels contained in the MAC. Provenance policy contains security context which is enforced by the MAC policy which contains permissions based on security context. IT provides the link between provenance and MAC. They argue that the system collects complete provenance without gaps in provenance relationship and still maintaining the MAC policy authorization domain. This is achieved by extending the work of Vijayakumar et. al.’s \cite{asiaccs12-vijayakumar} Integrity Walls project which allows mining SELinux policieswith the aim of finding Minimal Trusted Computing Base (MTCB) of various applications. A policy document is divided into trusted and untrusted labels. The trusted labels provides a thorough description of events relationship that can have access to the application. This information serves as a provenance policy that ensures a complete provenance relationship.
 
+\subsection{A Provenance-aware policy language (cProvl) and a data traceability model (cProv) for the Cloud}
+
+Ali et al \cite{Ali:2013:PPL:2569433.2569893} provides a provenance model, cProv, which illustrates relationships between entities contained in a cloud system. This model is build on PROV notation. cProv contains 5 derived nodes(cprov:cProcess, cprov:Resource, cProv:Transition, cprov:cResource, and cprov:pResource ). There are a total of 10 edges built on the relationships contained in the PROV notation. Node consists of properties such as location, time-to-live, virtual-to physical mappings, executed operations. They also develop a policy language, cProvl that allows for access of provenance data. cProvl is represented in XML and consists of rules  and conditions that expresses logic to enforce access of resources. Each rule contains an entity. XACML, a policy language for the enforcement of access control is used for implementing access control on the provenance policy information. cProvl is mapped to XACML to allow the policy to run on XACML which is widely used in the industry for access control implementation. An example of how the policy structure works is as follows: An application makes a request, this request is converted to the appropriate provenance aware request. This request is forwarded to the policy engine. The request is then evaluated by this layer by evaluating one or more policy rules as contained in a policy. This creates a response which is forwarded to the provenance converter which converted to the appropriate format for client utilization.
+
+
 
 \section{Related Work on Data Compression}
 
