--- a/chapter1.tex
+++ b/chapter1.tex
@@ -62,7 +62,7 @@ In this dissertation, we propose the following key contributions:
 
 \begin{itemize}
   \item A provenance collection framework which represents causality and dependencies between entities contained in an IoT system. This system creates groundwork for capturing and storing provenance data  across the IoT architectural stack.
-  \item An efficient algorithm for storing provenance data on IoT devices. We evaluate our contributions for an efficient provenance storage system by using an intrusion detection system on IoT devices.
+  \item A policy driven framework for efficient provenance data storage on IoT devices. We evaluate our contributions for an efficient provenance storage system by using an intrusion detection system on IoT devices.
 \end{itemize}
 
 \section{Organization of Dissertation proposal}
