--- a/chapter4.tex
+++ b/chapter4.tex
@@ -73,7 +73,7 @@ This section details how various components of IoT provenance collection system 
 \begin{figure}[h]
 \begin{center}
 
-\includegraphics[width =4.0in]{flow.PNG}    
+\includegraphics[width =4.5in]{flowchart.PNG}    
 \end{center}
 \caption{Architectural Flowchart }
 \label{flow_chart}
